js/SPL/SPLParser.js
// Generated from SPLParser.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SPLParserListener = require('./SPLParserListener').SPLParserListener;
var grammarFileName = "SPLParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "';'", "':'", "'/'", "'\\'", "'['", "']'", 
                     "'('", "')'", "'>'", "'<'", "'='", "'''", "'.'", "','", 
                     'null', 'null', "'DEFINE'", "'NAMESPACE'", "'REF'", 
                     "'DESCRIPTION'", "'BEGINS'", "'ENDS'", "'WITH'", "'BUNDLETYPE'", 
                     "'TABLE'", "'LINEGRAB'", "'COLUMN'", "'AS'", "'WITH NAME'", 
                     "'TYPE'", "'FILEPATTERN'", "'SOLRMAPPING'", "'CONTEXT'", 
                     "'MULTILINE'", "'SETXMLNAMESPACE'", "'NOT'", "'XML'", 
                     "'JSON'", "'SKIP'", "'ICON'", "'nvpair_basic'", "'list_basic'", 
                     "'aligned_basic'", "'xml_basic'", 'null', 'null', "'SOLR'", 
                     "'LOCK'", "'CONSTRAIN'", "'COLDROP'", "'COLFILL'", 
                     "'COLJOIN'", "'COLCOPY'", "'ADD_CONTEXT'", "'COLSPLIT'", 
                     "'COLREP'", "'COLMAP'", "'COLCALC'", "'COLCASE'", "'COLELSE'", 
                     "'COLEND'", "'COLWHEN'", "'COLCOUNT'", 'null', 'null', 
                     'null', 'null', 'null', "'name='", "'datatype='", "'multivalued='", 
                     "'uniquefielddef='", "'omitnorms='", "'storetermvectors='", 
                     "'storetermpositions='", "'storetermoffsets='", "'sysid1='", 
                     "'sysid2='", "'sysid3='", "'sessionid1='", "'sessionid2='", 
                     "'sessionid3='", "'sessionname='", "'sessionattr='", 
                     "'sessioncount='", "'filename='", "'ts='", "'linked='", 
                     "'content='", "'fragment_id='", "'obs_url='", "'obs_size='", 
                     "'uploaded_by='", "'facet='", "'severity='", "'units='", 
                     "'label='", "'begin_offset='", "'namespace='", "'type='", 
                     "'[L]'", "'[R]'", "'[C]'" ];

var symbolicNames = [ 'null', "SEMICOLON", "COLON", "DIVIDE", "BACKSLASH", 
                      "OPENSQUARE", "CLOSESQUARE", "OPENPARENTHESIS", "CLOSEPARENTHESIS", 
                      "GT", "LT", "EQUAL", "SINGLEQUOT", "DOT", "COMMA", 
                      "COMMENT", "WS", "DEFINE", "NAMESPACE", "REF", "DESCRIPTION", 
                      "BEGINS", "ENDS", "WITH", "BUNDLETYPE", "TABLE", "LINEGRAB", 
                      "COLUMN", "AS", "WITH_NAME", "TYPE", "FILEPATTERN", 
                      "SOLRMAPPING", "CONTEXT", "MULTILINE", "SETXMLNAMESPACE", 
                      "NOT", "XML", "JSON", "SKIP_N", "ICON", "NV_PAIR", 
                      "LIST_BASIC", "ALIGNED_BASIC", "XML_BASIC", "NULL_DEF", 
                      "NS_TYPES", "SOLR", "LOCK", "CONSTRAIN", "COLDROP", 
                      "COLFILL", "COLJOIN", "COLCOPY", "ADD_CONTEXT", "COLSPLIT", 
                      "COLREP", "COLMAP", "COLCALC", "COLCASE", "COLELSE", 
                      "COLEND", "COLWHEN", "COLCOUNT", "FUNCTION", "INT", 
                      "DT", "REGEX", "QUOTED_LABEL", "SOLRMAPPING_NAME", 
                      "SOLRMAPPING_DATATYPE", "SOLRMAPPING_MULTIVALUED", 
                      "SOLRMAPPING_UNIQFLDEF", "SOLRMAPPING_OMITNORMS", 
                      "SOLRMAPPING_STORETV", "SOLRMAPPING_STORETP", "SOLRMAPPING_STORETO", 
                      "COLMETA_SYSID1", "COLMETA_SYSID2", "COLMETA_SYSID3", 
                      "COLMETA_SESSID1", "COLMETA_SESSID2", "COLMETA_SESSID3", 
                      "COLMETA_SESS_NAME", "COLMETA_SESS_ATTR", "COLMETA_SESS_COUNT", 
                      "COLMETA_FILENAME", "COLMETA_TS", "COLMETA_LINKED", 
                      "COLMETA_CONTENT", "COLMETA_FRAGMENT_ID", "COLMETA_OBSURL", 
                      "COLMETA_OBSSIZE", "COLMETA_UPLOADEDBY", "COLMETA_FACET", 
                      "COLMETA_SEVERITY", "COLMETA_UNITS", "COLMETA_LABEL", 
                      "COLMETA_BEGIN_OFFSET", "COLMETA_NAMESPACE", "COLMETA_TYPE", 
                      "ALIGNED_BASIC_L", "ALIGNED_BASIC_R", "ALIGNED_BASIC_C", 
                      "IDENT", "IDENT_DOT" ];

var ruleNames =  [ "splg", "define", "namespace", "namespace_def", "ns_name", 
                   "ns_type_def", "ns_ref_name", "bundle_type", "ns_ctx", 
                   "begins_with", "ends_with", "file_pattern", "table", 
                   "table_def", "icon_def", "list_basic_icon_def", "nvpair_icon_def", 
                   "aligned_basic_icon_def", "xml_icon_def", "multiline", 
                   "skip_n", "set_xml_ns", "add_context", "constrain", "column_def", 
                   "obj_ref", "data_type", "label_def", "attrib_def", "colmeta_attrib_name", 
                   "colmeta_attrib_value", "as_def", "with_name_def", "solr_mapping", 
                   "solr_mapping_def", "solr_mapping_attr_name", "solr_mapping_attr_value", 
                   "alignment", "generic_colop_def", "col_op_def", "colcopy", 
                   "colcopy_param", "coljoin", "coljoin_param", "colsplit", 
                   "colsplit_param", "colrep", "colrep_param", "colfill", 
                   "colfill_param", "colmap", "colmap_param", "colcalc", 
                   "colcalc_param", "colcount", "colcount_param", "coldrop", 
                   "coldrop_param", "colwhen", "colwhen_param", "colcase", 
                   "colcase_when", "colcase_when_nested", "colcase_else" ];

function SPLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SPLParser.prototype = Object.create(antlr4.Parser.prototype);
SPLParser.prototype.constructor = SPLParser;

Object.defineProperty(SPLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SPLParser.EOF = antlr4.Token.EOF;
SPLParser.SEMICOLON = 1;
SPLParser.COLON = 2;
SPLParser.DIVIDE = 3;
SPLParser.BACKSLASH = 4;
SPLParser.OPENSQUARE = 5;
SPLParser.CLOSESQUARE = 6;
SPLParser.OPENPARENTHESIS = 7;
SPLParser.CLOSEPARENTHESIS = 8;
SPLParser.GT = 9;
SPLParser.LT = 10;
SPLParser.EQUAL = 11;
SPLParser.SINGLEQUOT = 12;
SPLParser.DOT = 13;
SPLParser.COMMA = 14;
SPLParser.COMMENT = 15;
SPLParser.WS = 16;
SPLParser.DEFINE = 17;
SPLParser.NAMESPACE = 18;
SPLParser.REF = 19;
SPLParser.DESCRIPTION = 20;
SPLParser.BEGINS = 21;
SPLParser.ENDS = 22;
SPLParser.WITH = 23;
SPLParser.BUNDLETYPE = 24;
SPLParser.TABLE = 25;
SPLParser.LINEGRAB = 26;
SPLParser.COLUMN = 27;
SPLParser.AS = 28;
SPLParser.WITH_NAME = 29;
SPLParser.TYPE = 30;
SPLParser.FILEPATTERN = 31;
SPLParser.SOLRMAPPING = 32;
SPLParser.CONTEXT = 33;
SPLParser.MULTILINE = 34;
SPLParser.SETXMLNAMESPACE = 35;
SPLParser.NOT = 36;
SPLParser.XML = 37;
SPLParser.JSON = 38;
SPLParser.SKIP_N = 39;
SPLParser.ICON = 40;
SPLParser.NV_PAIR = 41;
SPLParser.LIST_BASIC = 42;
SPLParser.ALIGNED_BASIC = 43;
SPLParser.XML_BASIC = 44;
SPLParser.NULL_DEF = 45;
SPLParser.NS_TYPES = 46;
SPLParser.SOLR = 47;
SPLParser.LOCK = 48;
SPLParser.CONSTRAIN = 49;
SPLParser.COLDROP = 50;
SPLParser.COLFILL = 51;
SPLParser.COLJOIN = 52;
SPLParser.COLCOPY = 53;
SPLParser.ADD_CONTEXT = 54;
SPLParser.COLSPLIT = 55;
SPLParser.COLREP = 56;
SPLParser.COLMAP = 57;
SPLParser.COLCALC = 58;
SPLParser.COLCASE = 59;
SPLParser.COLELSE = 60;
SPLParser.COLEND = 61;
SPLParser.COLWHEN = 62;
SPLParser.COLCOUNT = 63;
SPLParser.FUNCTION = 64;
SPLParser.INT = 65;
SPLParser.DT = 66;
SPLParser.REGEX = 67;
SPLParser.QUOTED_LABEL = 68;
SPLParser.SOLRMAPPING_NAME = 69;
SPLParser.SOLRMAPPING_DATATYPE = 70;
SPLParser.SOLRMAPPING_MULTIVALUED = 71;
SPLParser.SOLRMAPPING_UNIQFLDEF = 72;
SPLParser.SOLRMAPPING_OMITNORMS = 73;
SPLParser.SOLRMAPPING_STORETV = 74;
SPLParser.SOLRMAPPING_STORETP = 75;
SPLParser.SOLRMAPPING_STORETO = 76;
SPLParser.COLMETA_SYSID1 = 77;
SPLParser.COLMETA_SYSID2 = 78;
SPLParser.COLMETA_SYSID3 = 79;
SPLParser.COLMETA_SESSID1 = 80;
SPLParser.COLMETA_SESSID2 = 81;
SPLParser.COLMETA_SESSID3 = 82;
SPLParser.COLMETA_SESS_NAME = 83;
SPLParser.COLMETA_SESS_ATTR = 84;
SPLParser.COLMETA_SESS_COUNT = 85;
SPLParser.COLMETA_FILENAME = 86;
SPLParser.COLMETA_TS = 87;
SPLParser.COLMETA_LINKED = 88;
SPLParser.COLMETA_CONTENT = 89;
SPLParser.COLMETA_FRAGMENT_ID = 90;
SPLParser.COLMETA_OBSURL = 91;
SPLParser.COLMETA_OBSSIZE = 92;
SPLParser.COLMETA_UPLOADEDBY = 93;
SPLParser.COLMETA_FACET = 94;
SPLParser.COLMETA_SEVERITY = 95;
SPLParser.COLMETA_UNITS = 96;
SPLParser.COLMETA_LABEL = 97;
SPLParser.COLMETA_BEGIN_OFFSET = 98;
SPLParser.COLMETA_NAMESPACE = 99;
SPLParser.COLMETA_TYPE = 100;
SPLParser.ALIGNED_BASIC_L = 101;
SPLParser.ALIGNED_BASIC_R = 102;
SPLParser.ALIGNED_BASIC_C = 103;
SPLParser.IDENT = 104;
SPLParser.IDENT_DOT = 105;

SPLParser.RULE_splg = 0;
SPLParser.RULE_define = 1;
SPLParser.RULE_namespace = 2;
SPLParser.RULE_namespace_def = 3;
SPLParser.RULE_ns_name = 4;
SPLParser.RULE_ns_type_def = 5;
SPLParser.RULE_ns_ref_name = 6;
SPLParser.RULE_bundle_type = 7;
SPLParser.RULE_ns_ctx = 8;
SPLParser.RULE_begins_with = 9;
SPLParser.RULE_ends_with = 10;
SPLParser.RULE_file_pattern = 11;
SPLParser.RULE_table = 12;
SPLParser.RULE_table_def = 13;
SPLParser.RULE_icon_def = 14;
SPLParser.RULE_list_basic_icon_def = 15;
SPLParser.RULE_nvpair_icon_def = 16;
SPLParser.RULE_aligned_basic_icon_def = 17;
SPLParser.RULE_xml_icon_def = 18;
SPLParser.RULE_multiline = 19;
SPLParser.RULE_skip_n = 20;
SPLParser.RULE_set_xml_ns = 21;
SPLParser.RULE_add_context = 22;
SPLParser.RULE_constrain = 23;
SPLParser.RULE_column_def = 24;
SPLParser.RULE_obj_ref = 25;
SPLParser.RULE_data_type = 26;
SPLParser.RULE_label_def = 27;
SPLParser.RULE_attrib_def = 28;
SPLParser.RULE_colmeta_attrib_name = 29;
SPLParser.RULE_colmeta_attrib_value = 30;
SPLParser.RULE_as_def = 31;
SPLParser.RULE_with_name_def = 32;
SPLParser.RULE_solr_mapping = 33;
SPLParser.RULE_solr_mapping_def = 34;
SPLParser.RULE_solr_mapping_attr_name = 35;
SPLParser.RULE_solr_mapping_attr_value = 36;
SPLParser.RULE_alignment = 37;
SPLParser.RULE_generic_colop_def = 38;
SPLParser.RULE_col_op_def = 39;
SPLParser.RULE_colcopy = 40;
SPLParser.RULE_colcopy_param = 41;
SPLParser.RULE_coljoin = 42;
SPLParser.RULE_coljoin_param = 43;
SPLParser.RULE_colsplit = 44;
SPLParser.RULE_colsplit_param = 45;
SPLParser.RULE_colrep = 46;
SPLParser.RULE_colrep_param = 47;
SPLParser.RULE_colfill = 48;
SPLParser.RULE_colfill_param = 49;
SPLParser.RULE_colmap = 50;
SPLParser.RULE_colmap_param = 51;
SPLParser.RULE_colcalc = 52;
SPLParser.RULE_colcalc_param = 53;
SPLParser.RULE_colcount = 54;
SPLParser.RULE_colcount_param = 55;
SPLParser.RULE_coldrop = 56;
SPLParser.RULE_coldrop_param = 57;
SPLParser.RULE_colwhen = 58;
SPLParser.RULE_colwhen_param = 59;
SPLParser.RULE_colcase = 60;
SPLParser.RULE_colcase_when = 61;
SPLParser.RULE_colcase_when_nested = 62;
SPLParser.RULE_colcase_else = 63;

function SplgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SPLParser.RULE_splg;
    return this;
}

SplgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SplgContext.prototype.constructor = SplgContext;

SplgContext.prototype.EOF = function() {
    return this.getToken(SPLParser.EOF, 0);
};

SplgContext.prototype.define = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DefineContext);
    } else {
        return this.getTypedRuleContext(DefineContext,i);
    }
};

SplgContext.prototype.enterRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.enterSplg(this);
	}
};

SplgContext.prototype.exitRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.exitSplg(this);
	}
};




SPLParser.SplgContext = SplgContext;

SPLParser.prototype.splg = function() {

    var localctx = new SplgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SPLParser.RULE_splg);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 129; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 128;
            this.define();
            this.state = 131; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===SPLParser.DEFINE);
        this.state = 133;
        this.match(SPLParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DefineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SPLParser.RULE_define;
    return this;
}

DefineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefineContext.prototype.constructor = DefineContext;

DefineContext.prototype.namespace = function() {
    return this.getTypedRuleContext(NamespaceContext,0);
};

DefineContext.prototype.table = function() {
    return this.getTypedRuleContext(TableContext,0);
};

DefineContext.prototype.enterRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.enterDefine(this);
	}
};

DefineContext.prototype.exitRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.exitDefine(this);
	}
};




SPLParser.DefineContext = DefineContext;

SPLParser.prototype.define = function() {

    var localctx = new DefineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SPLParser.RULE_define);
    try {
        this.state = 137;
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 135;
            this.namespace();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 136;
            this.table();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NamespaceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SPLParser.RULE_namespace;
    return this;
}

NamespaceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NamespaceContext.prototype.constructor = NamespaceContext;

NamespaceContext.prototype.namespace_def = function() {
    return this.getTypedRuleContext(Namespace_defContext,0);
};

NamespaceContext.prototype.SEMICOLON = function() {
    return this.getToken(SPLParser.SEMICOLON, 0);
};

NamespaceContext.prototype.ns_type_def = function() {
    return this.getTypedRuleContext(Ns_type_defContext,0);
};

NamespaceContext.prototype.bundle_type = function() {
    return this.getTypedRuleContext(Bundle_typeContext,0);
};

NamespaceContext.prototype.begins_with = function() {
    return this.getTypedRuleContext(Begins_withContext,0);
};

NamespaceContext.prototype.ns_ctx = function() {
    return this.getTypedRuleContext(Ns_ctxContext,0);
};

NamespaceContext.prototype.ends_with = function() {
    return this.getTypedRuleContext(Ends_withContext,0);
};

NamespaceContext.prototype.file_pattern = function() {
    return this.getTypedRuleContext(File_patternContext,0);
};

NamespaceContext.prototype.enterRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.enterNamespace(this);
	}
};

NamespaceContext.prototype.exitRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.exitNamespace(this);
	}
};




SPLParser.NamespaceContext = NamespaceContext;

SPLParser.prototype.namespace = function() {

    var localctx = new NamespaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SPLParser.RULE_namespace);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 139;
        this.namespace_def();
        this.state = 141;
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        if(la_===1) {
            this.state = 140;
            this.ns_type_def();

        }
        this.state = 144;
        _la = this._input.LA(1);
        if(_la===SPLParser.BUNDLETYPE) {
            this.state = 143;
            this.bundle_type();
        }

        this.state = 147;
        _la = this._input.LA(1);
        if(_la===SPLParser.BEGINS) {
            this.state = 146;
            this.begins_with();
        }

        this.state = 150;
        _la = this._input.LA(1);
        if(_la===SPLParser.CONTEXT) {
            this.state = 149;
            this.ns_ctx();
        }

        this.state = 153;
        _la = this._input.LA(1);
        if(_la===SPLParser.ENDS) {
            this.state = 152;
            this.ends_with();
        }

        this.state = 156;
        _la = this._input.LA(1);
        if(_la===SPLParser.FILEPATTERN) {
            this.state = 155;
            this.file_pattern();
        }

        this.state = 158;
        this.match(SPLParser.SEMICOLON);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Namespace_defContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SPLParser.RULE_namespace_def;
    return this;
}

Namespace_defContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Namespace_defContext.prototype.constructor = Namespace_defContext;

Namespace_defContext.prototype.DEFINE = function() {
    return this.getToken(SPLParser.DEFINE, 0);
};

Namespace_defContext.prototype.NAMESPACE = function() {
    return this.getToken(SPLParser.NAMESPACE, 0);
};

Namespace_defContext.prototype.ns_name = function() {
    return this.getTypedRuleContext(Ns_nameContext,0);
};

Namespace_defContext.prototype.DESCRIPTION = function() {
    return this.getToken(SPLParser.DESCRIPTION, 0);
};

Namespace_defContext.prototype.QUOTED_LABEL = function() {
    return this.getToken(SPLParser.QUOTED_LABEL, 0);
};

Namespace_defContext.prototype.enterRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.enterNamespace_def(this);
	}
};

Namespace_defContext.prototype.exitRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.exitNamespace_def(this);
	}
};




SPLParser.Namespace_defContext = Namespace_defContext;

SPLParser.prototype.namespace_def = function() {

    var localctx = new Namespace_defContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SPLParser.RULE_namespace_def);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 160;
        this.match(SPLParser.DEFINE);
        this.state = 161;
        this.match(SPLParser.NAMESPACE);
        this.state = 162;
        this.ns_name();
        this.state = 163;
        this.match(SPLParser.DESCRIPTION);
        this.state = 164;
        this.match(SPLParser.QUOTED_LABEL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Ns_nameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SPLParser.RULE_ns_name;
    return this;
}

Ns_nameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Ns_nameContext.prototype.constructor = Ns_nameContext;

Ns_nameContext.prototype.IDENT = function() {
    return this.getToken(SPLParser.IDENT, 0);
};

Ns_nameContext.prototype.IDENT_DOT = function() {
    return this.getToken(SPLParser.IDENT_DOT, 0);
};

Ns_nameContext.prototype.enterRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.enterNs_name(this);
	}
};

Ns_nameContext.prototype.exitRule = function(listener) {
    if(listener instanceof SPLParserListener ) {
        listener.exitNs_name(this);
	}
};




SPLParser.Ns_nameContext = Ns_nameContext;

SPLParser.prototype.ns_name = function() {

    var localctx = new Ns_nameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SPLParser.RULE_ns_name);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 166;
        _la = this._input.LA(1);
        if(!(_la===SPLParser.IDENT || _la===SPLParser.IDENT_DOT)) {
        this._errHandler.recoverInline(this);
        }
        else {
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Ns_type_defContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SPLParser.RULE_ns_type_def;
    return this;
}

Ns_type_defContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Ns_type_defContext.prototype.constructor = Ns_type_defContext;

Ns_type_defContext.prototype.TYPE = function() {
    return this.getToken(SPLParser.TYPE, 0);
};

Ns_type_defContext.prototype.NS_TYPES = function() {
    return this.getToken(SPLParser.NS_TYPES, 0);
};

Ns_type_defContext.prototype.REF = function() {
    return this.getToken(SPLParser.REF, 0);
};

Ns_type_defContext.prototype.ns_ref_name = function() {
    return this.getTypedRuleContext(Ns_ref_nameContext,0);
};

Ns_type_defContext.prototype.LOCK = function() {
    return this.getToken(SPLParser.LOCK, 0);
};
